crates/strider/tests/snapshots/ppc64le__builtins__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10010220:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x10010240:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v10" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "6" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x10010260:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v15" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10010290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xdeadbeefcafebabe:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x100102b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x100102d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x32:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "33" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v34" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "26" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "21" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v30" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "16" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v25" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "11" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v20" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "6" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v15" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v10" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "70" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "72" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="StackStore u64\n→ ram[sp - 112]", shape=box3d, fillcolor="#20182a"];
  "73" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "75" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "75" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "78" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "78" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
